--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,2 +1,8 @@
-<h1>Customers#new</h1>
-<p>Find me in app/views/customers/new.html.erb</p>
+
+<div class= "row">
+    <div class= "col-log-12">
+        <h1>顧客新規登録</h1>
+        <%= render 'form'%>
+    </div>
+</div>
+<!--<p>Find me in app/views/customers/new.html.erb</p>-->
