--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,5 +1,5 @@
 <div class= "row">
-    <div class= "col-log-12">
+    <div class= "col-lg-12">
         <h1>顧客新規登録</h1>
         <%= render 'form'%>
     </div>
