--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -17,6 +17,7 @@
                         <th>名</th>
                         <th>電子メール</th>
                         <th>リンク</th>
+                        <th>所属会社</th>
                     </thead>
                     <tbody>
                         <% @customers.each do |customer| %>
@@ -24,6 +25,7 @@
                             <td><%= customer.family_name %></td>
                             <td><%= customer.given_name %></td>
                             <td><%= customer.email %></td>
+                            <td><%= customer.company.name %></td>
                             <td><%= link_to '詳細', customer, class: "btn btn-default btn-xs"%></td>
                         </tr>
                         <% end %>
