--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -14,6 +14,28 @@
         </dl>
         <%= link_to '編集', edit_customer_path(@customer), class: "btn btn-default" %>
         <%= link_to '戻る', customers_path, class: "btn btn-default" %>
+        
+        <h2>対応履歴</h2>
+        <% @comments.each do |comment| %>
+            <div class = "media">
+                <div class = "media-body">
+                    <%= simple_format(comment.body) %>
+                </div>
+                <p class = "text-muted">
+                    投稿記事:<%= comment.created_at.strftime('%Y%m%d %H:%M') %>
+                    
+                    <%= link_to "削除する",comment_path(comment), method: :delete %>
+                </p>
+            </div>            
+        <% end %>    
+        <hr />
+        <%= form_for(@comment, url: { controller: :comments, action: :create}) do |f| %>
+            <div class = "form-group">
+                <%= f.label :body , '対応内応' %><br />
+                <%= f.text_area :body , class: "form-control" %>
+            </div>
+            <%= f.hidden_field :customer_id, value: @customer.id %>
+            <%= f.submit class: "btn btn-default"%>
+        <% end %>
     </div>
-    
 </div>
