--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,6 +18,11 @@
         <%= f.label :email, "電子メール" %><br />
         <%= f.email_field :email, class: "form-control" %>
       </div>
+      
+      <div class= "form-group">
+        <%= f.label :image_url, "プロフィール画像" %><br />
+        <%= f.text_field :image_url, class: "form-control" %>
+      </div>
 
       <div class="form-group">
         <%= f.label :password, "パスワード" %>
