--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -18,6 +18,11 @@
         <%= f.label :email, "電子メール" %><br />
         <%= f.email_field :email, class: "form-control" %>
       </div>
+      <br />
+      <div class= "form-group">
+        <%= f.label :image_url, "プロフィール画像" %><br />
+        <%= f.text_field :image_url, class: "form-control" %>
+      </div>
 
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
         <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
