--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -17,6 +17,9 @@
         <h2>対応履歴</h2>
         <% @comments.each do |comment| %>
             <div class = "media">
+                <div class = "media-left">
+                    <%= image_tag comment.user.image_url, width: "64", class: "image-object", alt:"プロフィール"%>
+                </div>
                 <div class = "media-body">
                     <%= simple_format(comment.body) %>
                 <p class = "text-muted">
@@ -49,6 +52,7 @@
                 <%= f.text_area :body , class: "form-control" %>
             </div>
             <%= f.hidden_field :customer_id, value: @customer.id %>
+            <%= f.hidden_field :user_id,     value: current_user.id%>
             <%= f.submit class: "btn btn-default"%>
         <% end %>
     </div>
